# MCP-service-of-Vector-DB

./: .env.bert  .env.example  .env.openai  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  qwen.lnk  start.py
PRDs/: vector-db-service-plan.md  vector-db-service-requirements.md
document/: backgroud.md  bert_embedding_guide.md  openai_embedding_guide.md
examples/: basic_usage.py  basic_usage_no_embedding.py  basic_usage_simple.py  bert_batch_processing.py  bert_embedding_example.py  bert_model_evaluation.py  bert_rag_example.py  mcp_client_example.py  openai_embedding_example.py  rag_example.py  test_config.py
qdrant/: qdrant_disk_service.py
src/: __init__.py  main.py
src/api/: __init__.py  router.py
src/api/v1/: collections.py  search.py  vectors.py
src/core/: config.py  dependencies.py  embedding.py
src/db/: vector_db_service.py
src/mcp/: __init__.py  server.py
src/models/: collection.py  search.py  vector.py
src/utils/: text_splitter.py
